refactor: remove user and todo list related entities
