# controller/todo.go
@@ -2,7 +2,6 @@ package controller
 
 import (
 	"go-gin-todo/entity"
-	"go-gin-todo/helper"
 	validator "go-gin-todo/lib"
 	"go-gin-todo/service"
 	"net/http"
@@ -10,15 +9,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Security ApiKeyAuth
 // @Summary Get all todos
-// @Description Fetch a list of Todos that belongs to logged in user
+// @Description Fetch a list of Todos
 // @Produce  json
 // @Success 200 {array} entity.Todo
 // @Router /todo [get]
 func GetAllTodos(ctx *gin.Context) {
-	user := helper.GetLoggedInUser(ctx)
-	todos := service.GetAllTodos(user)
+	todos := service.GetAllTodos()
 
 	ctx.JSON(http.StatusOK, gin.H{
 		"data": todos,
@@ -26,7 +23,6 @@ func GetAllTodos(ctx *gin.Context) {
 
 }
 
-// @Security ApiKeyAuth
 // @Summary Add a new todo
 // @Description Add a new todo to the list
 // @Accept  json
@@ -35,17 +31,16 @@ func GetAllTodos(ctx *gin.Context) {
 // @Success 201 {object} entity.Todo
 // @Router /todo [post]
 func AddTodo(ctx *gin.Context) {
-	user := helper.GetLoggedInUser(ctx)
+
 	var todo entity.UpsertTodo
 	if err := ctx.ShouldBind(&todo); err != nil {
 		validator.HandleBindingError(err, ctx)
 		return
 	}
-	newTodo := service.CreateTodo(todo.Title, user)
+	newTodo := service.CreateTodo(todo.Title)
 	ctx.JSON(http.StatusCreated, &newTodo)
 }
 
-// @Security ApiKeyAuth
 // @Summary Fetch single Todo Item
 // @Description get Todo by ID
 // @Accept  json
@@ -54,9 +49,9 @@ func AddTodo(ctx *gin.Context) {
 // @Success 200 {object} entity.Todo
 // @Router /todo/{id} [get]
 func GetSingleTodo(ctx *gin.Context) {
-	user := helper.GetLoggedInUser(ctx)
+
 	id := ctx.Param("id")
-	todo, err := service.GetTodoById(id, user)
+	todo, err := service.GetTodoById(id)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, err.Error())
 		return
@@ -65,7 +60,6 @@ func GetSingleTodo(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, &todo)
 }
 
-// @Security ApiKeyAuth
 // @Summary Update existing Todo
 // @Description update Todo by ID
 // @Accept  json
@@ -75,7 +69,6 @@ func GetSingleTodo(ctx *gin.Context) {
 // @Success 200 {object} entity.Todo
 // @Router /todo/{id} [put]
 func UpdateTodo(ctx *gin.Context) {
-	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
 	todo := entity.UpsertTodo{}
 
@@ -84,7 +77,7 @@ func UpdateTodo(ctx *gin.Context) {
 		return
 	}
 
-	updatedTodo, err := service.UpdateTodoName(id, todo.Title, user)
+	updatedTodo, err := service.UpdateTodoName(id, todo.Title)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, err.Error())
 		return
@@ -93,7 +86,6 @@ func UpdateTodo(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, &updatedTodo)
 }
 
-// @Security ApiKeyAuth
 // @Summary Complete a Todo
 // @Description complete Todo by ID
 // @Accept  json
@@ -102,9 +94,8 @@ func UpdateTodo(ctx *gin.Context) {
 // @Success 200 {object} entity.Todo
 // @Router /todo/{id}/complete [put]
 func CompleteTodo(ctx *gin.Context) {
-	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
-	todo, err := service.CompleteTodo(id, user)
+	todo, err := service.CompleteTodo(id)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, err.Error())
 		return
@@ -113,7 +104,6 @@ func CompleteTodo(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, &todo)
 }
 
-// @Security ApiKeyAuth
 // @Summary Delete Todo
 // @Description delete Todo by ID
 // @Accept  json
@@ -122,9 +112,8 @@ func CompleteTodo(ctx *gin.Context) {
 // @Success 200 {string} string	"ok"
 // @Router /todo/{id} [delete]
 func DeleteTodo(ctx *gin.Context) {
-	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
-	err := service.DeleteTodo(id, user)
+	err := service.DeleteTodo(id)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, err.Error())
 		return
