# docs/swagger.yaml
@@ -11,12 +11,8 @@ definitions:
         type: string
       title:
         type: string
-      todoListID:
-        type: integer
       updatedAt:
         type: string
-      userID:
-        type: integer
     type: object
   entity.UpsertTodo:
     properties:
@@ -42,7 +38,7 @@ info:
 paths:
   /todo:
     get:
-      description: Fetch a list of Todos that belongs to logged in user
+      description: Fetch a list of Todos
       produces:
       - application/json
       responses:
@@ -52,8 +48,6 @@ paths:
             items:
               $ref: '#/definitions/entity.Todo'
             type: array
-      security:
-      - ApiKeyAuth: []
       summary: Get all todos
     post:
       consumes:
@@ -73,8 +67,6 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/entity.Todo'
-      security:
-      - ApiKeyAuth: []
       summary: Add a new todo
   /todo/{id}:
     delete:
@@ -94,8 +86,6 @@ paths:
           description: ok
           schema:
             type: string
-      security:
-      - ApiKeyAuth: []
       summary: Delete Todo
     get:
       consumes:
@@ -114,8 +104,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/entity.Todo'
-      security:
-      - ApiKeyAuth: []
       summary: Fetch single Todo Item
     put:
       consumes:
@@ -140,8 +128,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/entity.Todo'
-      security:
-      - ApiKeyAuth: []
       summary: Update existing Todo
   /todo/{id}/complete:
     put:
@@ -161,12 +147,5 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/entity.Todo'
-      security:
-      - ApiKeyAuth: []
       summary: Complete a Todo
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
