# entity/todo-list.go
@@ -1,10 +1,0 @@
-package entity
-
-import "gorm.io/gorm"
-
-type TodoList struct {
-	gorm.Model
-	Title  string
-	UserID uint
-	Todos  []Todo `gorm:"foreignKey:TodoListID"`
-}
